# OSC-Bridge

./: .gitignore  Auto Startup With Loupedeck.bat  README.md  index.html  osc-bridge.cjs  osc-bridge.js  osc-bridge_8080.js  package-lock.json  package.json  run.bat  start_app.bat  sync-version.cjs  tailwind.config.cjs  test_silent_start.bat  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
Doc/: cursor_2.md  新的设计.jsx
Doc/Debug/: cursor_1.md
Doc/Main/: 1.项目概述.md  2.技术架构总览.md  3.项目规范与约定.md  4.统一开发流程.md  5.功能模块设计.md  6.开发时间线.md  7.技术风险与解决方案.md
Doc/Note/: MIGRATION_PLAN_SVELTE.md  架构迁移与开发实战指南 (最终合并版).md
Resource/: config.json  convert-icons-puppeteer.cjs  sync-version.cjs
Source/Svelte/: App.svelte  main.ts  splashscreen.html  styles.css
Source/Svelte/lib/: bridge.ts  i18n.ts
Source/Svelte/lib/components/: Injector.svelte  LeftPanel.svelte  SettingsModal.svelte  StatusBar.svelte  SystemLog.svelte  TopBar.svelte  TrafficMonitor.svelte
Source/Svelte/lib/components/shared/: SectionHeader.svelte  StatPill.svelte  TechInput.svelte  TechToggle.svelte
Source/Svelte/lib/icons/: ArrowDownLeft.svelte  Check.svelte  Minimize.svelte  Moon.svelte  PauseCircle.svelte  Pin.svelte  Play.svelte  Send.svelte  Server.svelte  Settings.svelte  Terminal.svelte  Trash2.svelte  X.svelte
Source/Svelte/lib/locales/: en.json  zh-CN.json
Source/Svelte/lib/stores/: stores.ts
Source/Tauri/: Cargo.toml  build.rs  check_output.txt  tauri.conf.json
Source/Tauri/capabilities/: default.json
Source/Tauri/nsis/: install.nsh
Source/Tauri/src/: bridge.rs  lib.rs  main.rs  schtasks.rs
Source/Tauri/wix/: main.wxs
scripts/: post-build.cjs  sync-version.cjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  lib.rs
src/lib/components/: Injector.svelte  RightPanel.svelte  SettingsModal.svelte  TrafficMonitor.svelte
src/lib/components/shared/: LogLine.svelte  TechInput.svelte
src/lib/icons/: Activity.svelte  ArrowUpRight.svelte  PlayCircle.svelte  Plus.svelte  Radio.svelte  Search.svelte  Sun.svelte
src/lib/stores/: stores.ts
