[package]
name = "OSC-Bridge"
version = "2.1.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "osc_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.5.0"
auto-launch = "0.5.0"
which = "6.0.1"
# 新增的依赖
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
tokio-tungstenite = "0.21.0"
rosc = "0.10.1"
futures-util = "0.3.30"
tokio-util = "0.7.11"
anyhow = "1.0.86"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

